# bardi

./: .buildinfo  .gitignore  LICENSE  README.md  advanced.html  bardi.data.html  bardi.data.utils.html  bardi.html  bardi.nlp_engineering.html  bardi.nlp_engineering.regex_library.html  bardi.nlp_engineering.utils.html  bardi.pipeline.html  basic.html  example.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: sphinx.yml
_modules/: index.html
_modules/bardi/: pipeline.html
_sources/: advanced.rst.txt  bardi.nlp_engineering.rst.txt  index.rst.txt
bardi/: __init__.py  pipeline.py
bardi/data/: __init__.py  data_handlers.py
bardi/nlp_engineering/: __init__.py  embedding_generator.py  label_processor.py  normalizer.py  post_processor.py  pre_tokenizer.py  splitter.py  tokenizer_encoder.py  tokenizer_trainer.py  vocab_encoder.py
docs/: CNAME  bardi.data.utils.html  bardi.html  bardi.nlp_engineering.regex_library.html  bardi.nlp_engineering.utils.html  conf.py  docs-help.md  genindex.html  index.html  modules.rst  requirements.txt  requirements_test.txt  searchindex.js
docs/doctrees/: bardi.data.doctree  bardi.doctree  bardi.nlp_engineering.utils.doctree  environment.pickle
docs/source/: advanced.rst  bardi.data.rst  bardi.data.utils.rst  bardi.nlp_engineering.rst  bardi.pipeline.rst  bardi.rst  basic.rst  conf.py  gaudi.data.rst  gaudi.data.utils.rst  gaudi.nlp_engineering.rst  gaudi.nlp_engineering.utils.rst  gaudi.rst  index.rst  installation.rst  modules.rst  tests.rst
gaudi/: README.md  pipeline.py
gaudi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gaudi/data/: __init__.py  data_handlers.py
gaudi/nlp_engineering/: __init__.py  (+6 more)
html/: .buildinfo  bardi.data.html  bardi.nlp_engineering.html  example.html  modules.html  py-modindex.html  search.html
tests/: data_handlers_tests.py  embedding_generator_tests.py  label_processor_tests.py  main_test.py  normalizer_tests.py  pipeline_tests.py  polars_utils_tests.py  postprocessor_tests.py  pretokenizer_tests.py  regex_multi_test.py  regex_tests.py  splitter_tests.py  tokenizer_tests.py  vocab_encoder_tests.py
(+52 files in other folders)
