[build-system]
requires = ["setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "bardi"
version="0.2.1"
authors = [{ name="Oak Ridge National Laboratory" },]
description = "A flexible machine learning data pre-processing pipeline framework."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["duckdb==0.8.0",
                "gensim>=4.1.2",
                "numpy>=1.21.5",
                "pandas>=1.4.4",
                "polars>=0.19.8",
                "pyarrow>=12.0.1",
                "setuptools>=61.0",
                ]
